<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tarea">

    <fragment
        android:id="@+id/nav_tarea"
        android:name="com.tarea.ui.Tarea.TareaFragment"
        android:label="@string/menu_tarea"
        tools:layout="@layout/fragment_tarea" >
        <action
            android:id="@+id/action_nav_tarea_to_addParqueoFragment"
            app:destination="@id/addParqueoFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tarea.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tarea.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addParqueoFragment"
        android:name="com.tarea.ui.Tarea.AddParqueoFragment"
        android:label="fragment_add_parqueo"
        tools:layout="@layout/fragment_add_parqueo" >
        <action
            android:id="@+id/action_addParqueoFragment_to_nav_tarea"
            app:destination="@id/nav_tarea" />
    </fragment>
</navigation>